--- a/team.html
+++ b/team.html
@@ -10,19 +10,25 @@
 </head>
 <body>
     <div class="wrapper">
+
         <!-- Header / Navbar -->
         <header>
             <nav class="navbar">
+                <!-- Logo -->
                 <div class="logo">
-                    <a href="index.html"><img src="images/logo.png" alt="Mugabe Ivan Advocates" height="40"></a>
+                    <a href="index.html">
+                        <img src="images/logo.jpg" alt="MUGABE IVAN & CO. ADVOCATES Logo" height="50">
+                    </a>
                 </div>
 
+                <!-- Hamburger menu for mobile -->
                 <div class="hamburger" id="hamburger">
                     <span class="bar"></span>
                     <span class="bar"></span>
                     <span class="bar"></span>
                 </div>
 
+                <!-- Navigation links -->
                 <ul id="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
@@ -35,45 +41,51 @@
         </header>
 
         <!-- Hero Section -->
-        <section id="page-hero">
-            <img src="images/hero.jpg" alt="Team Mugabe Ivan Advocates" class="hero-img">
+        <section class="hero-team">
             <div class="hero-text">
                 <h1>Meet Our Team</h1>
+                <p>Expert legal professionals committed to your success</p>
             </div>
         </section>
 
         <!-- Team Section -->
-        <section class="container">
-            <h2>Our Legal Experts</h2>
-            <div class="team-list">
-                <div class="team-member">
-                    <img src="images/team1.jpg" alt="Ivan Mugabe" class="team-img">
-                    <h3>Ivan Mugabe</h3>
-                    <p>Managing Partner – Corporate & Civil Law Specialist</p>
-                </div>
-                <div class="team-member">
-                    <img src="images/team2.jpg" alt="Jane Doe" class="team-img">
-                    <h3>Jane Doe</h3>
-                    <p>Senior Associate – Criminal Defense Expert</p>
-                </div>
-                <div class="team-member">
-                    <img src="images/team3.jpg" alt="John Smith" class="team-img">
-                    <h3>John Smith</h3>
-                    <p>Associate – Property & Land Law</p>
-                </div>
-                <div class="team-member">
-                    <img src="images/team4.jpg" alt="Mary Ann" class="team-img">
-                    <h3>Mary Ann</h3>
-                    <p>Legal Consultant – Family Law</p>
+        <section id="team" class="team-section">
+            <div class="container">
+                <h2>Our Team</h2>
+                <p class="team-intro">Meet the legal experts behind MUGABE IVAN & CO. ADVOCATES.</p>
+
+                <div class="team-grid">
+
+                    <!-- Team Member 1 -->
+                    <div class="team-member">
+                        <img src="images/team/member1.jpg" alt="MUGABE IVAN - Senior Partner">
+                        <h3>MUGABE IVAN</h3>
+                        <p>Senior Partner</p>
+                    </div>
+
+                    <!-- Team Member 2 -->
+                    <div class="team-member">
+                        <img src="images/team/member2.jpg" alt="ANY NEW - Associate Lawyer">
+                        <h3>ANY NEW</h3>
+                        <p>Associate Lawyer</p>
+                    </div>
+
+                    <!-- Team Member 3 -->
+                    <div class="team-member">
+                        <img src="images/team/member3.jpg" alt="BYARUHANGA EMMANUEL - Paralegal">
+                        <h3>BYARUHANGA EMMANUEL</h3>
+                        <p>Paralegal</p>
+                    </div>
+
+                    <!-- Team Member 4 -->
+                    <div class="team-member">
+                        <img src="images/team/member4.jpg" alt="SAVIO DOMINIC - Legal Advisor">
+                        <h3>SAVIO DOMINIC</h3>
+                        <p>Legal Advisor</p>
+                    </div>
+
                 </div>
             </div>
-        </section>
-
-        <!-- Call-to-Action Section -->
-        <section class="cta container">
-            <h2>Need Legal Assistance?</h2>
-            <p>Contact us today for a professional consultation.</p>
-            <a href="contact.html" class="btn">Contact Us</a>
         </section>
 
         <!-- Footer -->
@@ -98,7 +110,7 @@
 
                 <div class="footer-section">
                     <h3>Contact Us</h3>
-                    <p>Office: 123 Legal Street, Kampala, Uganda</p>
+                    <p>Office: Kisozi Close, Kampala, Uganda</p>
                     <p>Phone: +256 700 123 456</p>
                     <p>Email: info@mugabeivan.com</p>
                 </div>
@@ -118,9 +130,9 @@
                 &copy; 2025 MUGABE IVAN & CO. ADVOCATES. All rights reserved.
             </div>
         </footer>
+
     </div>
 
     <script src="js/main.js" defer></script>
-    <script src="js/validation.js" defer></script>
 </body>
 </html>
