--- a/privacy.html
+++ b/privacy.html
@@ -10,30 +10,34 @@
 </head>
 <body>
     <div class="wrapper">
-        <!-- Header / Navbar -->
-        <header>
-            <nav class="navbar">
-                <div class="logo">
-                    <a href="index.html"><img src="images/logo.png" alt="Mugabe Ivan Advocates" height="40"></a>
-                </div>
+      <header>
+  <nav class="navbar">
+    <!-- Logo -->
+    <div class="logo">
+      <a href="index.html">
+        <img src="images/yourlogo.jpg" alt="MUGABE IVAN & CO. ADVOCATES Logo" height="50">
+      </a>
+    </div>
 
-                <div class="hamburger" id="hamburger">
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                </div>
+    <!-- Hamburger menu for mobile -->
+    <div class="hamburger" id="hamburger">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+    </div>
 
-                <ul id="nav-links">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="cases.html">Cases</a></li>
-                    <li><a href="team.html">Team</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><a href="privacy.html" class="active">Privacy</a></li>
-                </ul>
-            </nav>
-        </header>
+    <!-- Navigation links -->
+    <ul id="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="cases.html">Cases</a></li>
+      <li><a href="team.html">Team</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+</header>
+
 
         <!-- Hero Section -->
         <section id="page-hero">
