Update main.js, main.css, and index.html: mobile menu and footer improvements

--- a/index.html
+++ b/index.html
@@ -7,37 +7,92 @@
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <style>
+        /* ====== Hamburger Menu & Mobile Nav ====== */
+        .hamburger {
+            display: none;
+            flex-direction: column;
+            justify-content: space-between;
+            width: 25px;
+            height: 20px;
+            cursor: pointer;
+            z-index: 300;
+        }
+        .hamburger .bar {
+            height: 3px;
+            width: 100%;
+            background-color: #fff;
+            border-radius: 2px;
+            transition: all 0.3s ease;
+        }
+        @media (max-width: 768px) {
+            .hamburger {
+                display: flex;
+                position: absolute;
+                top: 15px;
+                right: 20px;
+            }
+            #nav-links {
+                display: none;
+                position: absolute;
+                top: 60px;
+                right: 0;
+                width: 200px;
+                background-color: #0b1d3a;
+                flex-direction: column;
+                padding: 10px 0;
+                text-align: center;
+                border-radius: 6px;
+            }
+            #nav-links.active {
+                display: flex;
+            }
+            #nav-links li {
+                margin: 10px 0;
+            }
+        }
+        /* Hamburger animation */
+        .hamburger.active .bar:nth-child(1) {
+            transform: rotate(45deg) translate(5px, 5px);
+        }
+        .hamburger.active .bar:nth-child(2) {
+            opacity: 0;
+        }
+        .hamburger.active .bar:nth-child(3) {
+            transform: rotate(-45deg) translate(5px, -5px);
+        }
+    </style>
 </head>
 <body>
     <div class="wrapper">
         <!-- Header / Navbar -->
-       <header>
-  <nav class="navbar">
-    <!-- Logo -->
-    <div class="logo">
-      <a href="index.html">
-        <img src="images/logo.jpg" alt="MUGABE IVAN & CO. ADVOCATES Logo" height="50">
-      </a>
-    </div>
+        <header>
+            <nav class="navbar">
+                <!-- Logo -->
+                <div class="logo">
+                    <a href="index.html">
+                        <img src="images/logo.jpg" alt="MUGABE IVAN & CO. ADVOCATES Logo" height="50">
+                    </a>
+                </div>
 
-    <!-- Hamburger menu for mobile -->
-    <div class="hamburger" id="hamburger">
-      <span class="bar"></span>
-      <span class="bar"></span>
-      <span class="bar"></span>
-    </div>
+                <!-- Hamburger menu for mobile -->
+                <div class="hamburger" id="hamburger">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </div>
 
-    <!-- Navigation links -->
-    <ul id="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="services.html">Services</a></li>
-      <li><a href="cases.html">Cases</a></li>
-      <li><a href="team.html">Team</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
-</header>
+                <!-- Navigation links -->
+                <ul id="nav-links">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="cases.html">Cases</a></li>
+                    <li><a href="team.html">Team</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
 
         <!-- Hero Section -->
         <section id="hero">
@@ -79,7 +134,6 @@
                     <h3>About Us</h3>
                     <p>MUGABE IVAN & CO. ADVOCATES is a leading law firm in Uganda providing professional legal services in corporate, civil, and criminal law.</p>
                 </div>
-
                 <div class="footer-section">
                     <h3>Quick Links</h3>
                     <ul>
@@ -91,14 +145,12 @@
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
-
                 <div class="footer-section">
                     <h3>Contact Us</h3>
                     <p>Office: 123 Legal Street, Kampala, Uganda</p>
                     <p>Phone: +256 700 123 456</p>
                     <p>Email: info@mugabeivan.com</p>
                 </div>
-
                 <div class="footer-section">
                     <h3>Follow Us</h3>
                     <div class="social-links">
@@ -109,7 +161,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="copyright">
                 &copy; 2025 MUGABE IVAN & CO. ADVOCATES. All rights reserved.
             </div>
@@ -117,7 +168,15 @@
     </div> <!-- end wrapper -->
 
     <!-- JS -->
-    <script src="js/main.js" defer></script>
-    <script src="js/validation.js" defer></script>
+    <script>
+        // Hamburger toggle
+        const hamburger = document.getElementById('hamburger');
+        const navLinks = document.getElementById('nav-links');
+
+        hamburger.addEventListener('click', () => {
+            hamburger.classList.toggle('active');
+            navLinks.classList.toggle('active');
+        });
+    </script>
 </body>
 </html>
