Update index, CSS, hamburger, and animation fixes

--- a/cases.html
+++ b/cases.html
@@ -37,13 +37,15 @@
 </header>
 
 
-        <!-- Hero Section -->
-        <section id="page-hero">
-            <img src="images/hero.jpg" alt="Cases Mugabe Ivan Advocates" class="hero-img">
-            <div class="hero-text">
-                <h1>Our Notable Cases</h1>
-            </div>
-        </section>
+       <!-- Hero Section -->
+<section class="hero-cases">
+    <img src="images/hero.jpg" alt="Cases Mugabe Ivan Advocates" class="hero-img">
+    <div class="hero-text">
+        <h1>Our Notable Cases</h1>
+        <p>Explore the landmark cases handled by MUGABE IVAN & CO. ADVOCATES.</p>
+    </div>
+</section>
+
 
         <!-- Cases Section -->
         <section class="container">
