--- a/about.html
+++ b/about.html
@@ -40,25 +40,32 @@
 </header>
 
 
-        <!-- Hero Section -->
-        <section id="page-hero">
-            <img src="images/hero.jpg" alt="About Mugabe Ivan Advocates" class="hero-img">
-            <div class="hero-text">
-                <h1>About Us</h1>
-            </div>
-        </section>
+     <!-- Hero Section -->
+<section class="hero-about">
+    <img src="images/hero.jpg" alt="About Mugabe Ivan Advocates" class="hero-img">
+    <div class="hero-text">
+        <h1>About Us</h1>
+        <p>Your trusted legal advisors in Uganda</p>
+    </div>
+</section>
 
-        <!-- About Content Section -->
-        <section class="container about-section">
-            <h2>Who We Are</h2>
-            <p>MUGABE IVAN & CO. ADVOCATES is a premier law firm based in Kampala, Uganda, providing professional legal services in corporate, civil, criminal, and property law. Our mission is to offer comprehensive, ethical, and results-driven legal counsel to individuals and businesses.</p>
+<!-- About Content Section -->
+<section class="container about-section">
+    <h2>Who We Are</h2>
+    <p>MUGABE IVAN & CO. ADVOCATES is a premier law firm based in Kampala, Uganda, providing professional legal services in corporate, civil, criminal, and property law. Our mission is to offer comprehensive, ethical, and results-driven legal counsel to individuals and businesses.</p>
 
+    <div class="about-grid">
+        <div class="about-card">
             <h3>Our Vision</h3>
             <p>To be recognized as Uganda’s leading law firm known for excellence, integrity, and client-focused solutions.</p>
+        </div>
 
+        <div class="about-card">
             <h3>Our Mission</h3>
             <p>To provide expert legal services, protect clients' rights, and uphold justice with professionalism and dedication.</p>
+        </div>
 
+        <div class="about-card">
             <h3>Our Values</h3>
             <ul>
                 <li><strong>Integrity:</strong> We maintain the highest ethical standards.</li>
@@ -67,7 +74,10 @@
                 <li><strong>Confidentiality:</strong> Protecting sensitive information.</li>
                 <li><strong>Teamwork:</strong> Collaborating to provide comprehensive solutions.</li>
             </ul>
-        </section>
+        </div>
+    </div>
+</section>
+
 
         <!-- Call-to-Action Section -->
         <section class="cta container">
