--- a/team.html
+++ b/team.html
@@ -1,138 +1,245 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Team - MUGABE IVAN & CO. ADVOCATES</title>
-    <link rel="icon" href="favicon.ico">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/responsive.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Team - MUGABE IVAN & CO. ADVOCATES</title>
+<link rel="icon" href="favicon.ico">
+<link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="css/responsive.css">
+<style>
+/* Hero Section */
+.hero-team {
+    position: relative;
+    background: url('images/hero.jpg') center/cover no-repeat;
+    height: 400px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.hero-team .hero-text {
+    background: rgba(0,0,0,0.6);
+    color: #fff;
+    padding: 20px 40px;
+    border-radius: 8px;
+    text-align: center;
+}
+
+.hero-team .hero-text h1 {
+    font-size: 2.2rem;
+    margin-bottom: 10px;
+}
+
+.hero-team .hero-text p {
+    font-size: 1.1rem;
+}
+
+/* Team Section */
+.team-section {
+    padding: 50px 0;
+    background-color: #f4f4f4;
+}
+
+.team-section h2 {
+    text-align: center;
+    margin-bottom: 10px;
+    color: #0b1d3a;
+}
+
+.team-section .team-intro {
+    text-align: center;
+    margin-bottom: 40px;
+    font-size: 1rem;
+    color: #333;
+}
+
+/* Team Grid */
+.team-grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 30px;
+}
+
+.team-member {
+    background-color: #fff;
+    border-radius: 10px;
+    overflow: hidden;
+    width: 250px;
+    text-align: center;
+    box-shadow: 0 6px 12px rgba(0,0,0,0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.team-member:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+}
+
+.team-member img {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+}
+
+.team-member h3 {
+    margin: 15px 0 5px 0;
+    color: #0b1d3a;
+}
+
+.team-member p {
+    margin-bottom: 15px;
+    color: #666;
+}
+
+/* Responsive Team Grid */
+@media (max-width: 1024px) {
+    .team-grid {
+        gap: 20px;
+    }
+}
+
+@media (max-width: 768px) {
+    .team-member {
+        width: 45%;
+    }
+}
+
+@media (max-width: 480px) {
+    .team-member {
+        width: 90%;
+    }
+
+    .hero-team {
+        height: 300px;
+    }
+
+    .hero-team .hero-text h1 {
+        font-size: 1.5rem;
+    }
+
+    .hero-team .hero-text p {
+        font-size: 0.9rem;
+    }
+}
+</style>
 </head>
 <body>
-    <div class="wrapper">
+<div class="wrapper">
 
-        <!-- Header / Navbar -->
-        <header>
-            <nav class="navbar">
-                <!-- Logo -->
-                <div class="logo">
-                    <a href="index.html">
-                        <img src="images/logo.jpg" alt="MUGABE IVAN & CO. ADVOCATES Logo" height="50">
-                    </a>
+    <!-- Header / Navbar -->
+    <header>
+        <nav class="navbar">
+            <!-- Logo -->
+            <div class="logo">
+                <a href="index.html">
+                    <img src="images/logo.jpg" alt="MUGABE IVAN & CO. ADVOCATES Logo" height="50">
+                </a>
+            </div>
+
+            <!-- Hamburger menu -->
+            <div class="hamburger" id="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+
+            <!-- Navigation links -->
+            <ul id="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="cases.html">Cases</a></li>
+                <li><a href="team.html" class="active">Team</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Hero Section -->
+    <section class="hero-team">
+        <div class="hero-text">
+            <h1>Meet Our Team</h1>
+            <p>Expert legal professionals committed to your success</p>
+        </div>
+    </section>
+
+    <!-- Team Section -->
+    <section id="team" class="team-section">
+        <div class="container">
+            <h2>Our Team</h2>
+            <p class="team-intro">Meet the legal experts behind MUGABE IVAN & CO. ADVOCATES.</p>
+
+            <div class="team-grid">
+                <div class="team-member">
+                    <img src="images/team/member1.jpg" alt="MUGABE IVAN - Senior Partner">
+                    <h3>MUGABE IVAN</h3>
+                    <p>Senior Partner</p>
                 </div>
-
-                <!-- Hamburger menu for mobile -->
-                <div class="hamburger" id="hamburger">
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                    <span class="bar"></span>
+                <div class="team-member">
+                    <img src="images/team/member2.jpg" alt="ANY NEW - Associate Lawyer">
+                    <h3>ANY NEW</h3>
+                    <p>Associate Lawyer</p>
                 </div>
+                <div class="team-member">
+                    <img src="images/team/member3.jpg" alt="BYARUHANGA EMMANUEL - Paralegal">
+                    <h3>BYARUHANGA EMMANUEL</h3>
+                    <p>Paralegal</p>
+                </div>
+                <div class="team-member">
+                    <img src="images/team/member4.jpg" alt="SAVIO DOMINIC - Legal Advisor">
+                    <h3>SAVIO DOMINIC</h3>
+                    <p>Legal Advisor</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
-                <!-- Navigation links -->
-                <ul id="nav-links">
+    <!-- Footer -->
+    <footer>
+        <div class="footer-container">
+            <div class="footer-section">
+                <h3>About Us</h3>
+                <p>MUGABE IVAN & CO. ADVOCATES is a leading law firm in Uganda providing professional legal services in corporate, civil, and criminal law.</p>
+            </div>
+
+            <div class="footer-section">
+                <h3>Quick Links</h3>
+                <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="services.html">Services</a></li>
                     <li><a href="cases.html">Cases</a></li>
-                    <li><a href="team.html" class="active">Team</a></li>
+                    <li><a href="team.html">Team</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
-            </nav>
-        </header>
-
-        <!-- Hero Section -->
-        <section class="hero-team">
-            <div class="hero-text">
-                <h1>Meet Our Team</h1>
-                <p>Expert legal professionals committed to your success</p>
-            </div>
-        </section>
-
-        <!-- Team Section -->
-        <section id="team" class="team-section">
-            <div class="container">
-                <h2>Our Team</h2>
-                <p class="team-intro">Meet the legal experts behind MUGABE IVAN & CO. ADVOCATES.</p>
-
-                <div class="team-grid">
-
-                    <!-- Team Member 1 -->
-                    <div class="team-member">
-                        <img src="images/team/member1.jpg" alt="MUGABE IVAN - Senior Partner">
-                        <h3>MUGABE IVAN</h3>
-                        <p>Senior Partner</p>
-                    </div>
-
-                    <!-- Team Member 2 -->
-                    <div class="team-member">
-                        <img src="images/team/member2.jpg" alt="ANY NEW - Associate Lawyer">
-                        <h3>ANY NEW</h3>
-                        <p>Associate Lawyer</p>
-                    </div>
-
-                    <!-- Team Member 3 -->
-                    <div class="team-member">
-                        <img src="images/team/member3.jpg" alt="BYARUHANGA EMMANUEL - Paralegal">
-                        <h3>BYARUHANGA EMMANUEL</h3>
-                        <p>Paralegal</p>
-                    </div>
-
-                    <!-- Team Member 4 -->
-                    <div class="team-member">
-                        <img src="images/team/member4.jpg" alt="SAVIO DOMINIC - Legal Advisor">
-                        <h3>SAVIO DOMINIC</h3>
-                        <p>Legal Advisor</p>
-                    </div>
-
-                </div>
-            </div>
-        </section>
-
-        <!-- Footer -->
-        <footer>
-            <div class="footer-container">
-                <div class="footer-section">
-                    <h3>About Us</h3>
-                    <p>MUGABE IVAN & CO. ADVOCATES is a leading law firm in Uganda providing professional legal services in corporate, civil, and criminal law.</p>
-                </div>
-
-                <div class="footer-section">
-                    <h3>Quick Links</h3>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="services.html">Services</a></li>
-                        <li><a href="cases.html">Cases</a></li>
-                        <li><a href="team.html">Team</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul>
-                </div>
-
-                <div class="footer-section">
-                    <h3>Contact Us</h3>
-                    <p>Office: Kisozi Close, Kampala, Uganda</p>
-                    <p>Phone: +256 700 123 456</p>
-                    <p>Email: info@mugabeivan.com</p>
-                </div>
-
-                <div class="footer-section">
-                    <h3>Follow Us</h3>
-                    <div class="social-links">
-                        <a href="#">Facebook</a>
-                        <a href="#">Twitter</a>
-                        <a href="#">LinkedIn</a>
-                        <a href="#">Instagram</a>
-                    </div>
-                </div>
             </div>
 
-            <div class="copyright">
-                &copy; 2025 MUGABE IVAN & CO. ADVOCATES. All rights reserved.
+            <div class="footer-section">
+                <h3>Contact Us</h3>
+                <p>Office: Kisozi Close, Kampala, Uganda</p>
+                <p>Phone: +256 700 123 456</p>
+                <p>Email: info@mugabeivan.com</p>
             </div>
-        </footer>
 
-    </div>
+            <div class="footer-section">
+                <h3>Follow Us</h3>
+                <div class="social-links">
+                    <a href="#">Facebook</a>
+                    <a href="#">Twitter</a>
+                    <a href="#">LinkedIn</a>
+                    <a href="#">Instagram</a>
+                </div>
+            </div>
+        </div>
 
-    <script src="js/main.js" defer></script>
+        <div class="copyright">
+            &copy; 2025 MUGABE IVAN & CO. ADVOCATES. All rights reserved.
+        </div>
+    </footer>
+</div>
+
+<script src="js/main.js" defer></script>
 </body>
 </html>
