Ultra-compact footer and contact page updates

--- a/contact.html
+++ b/contact.html
@@ -39,11 +39,13 @@
 
   <!-- Hero Section -->
   <section class="hero-contact">
+    <img src="images/hero.jpg" alt="Contact Mugabe Ivan Advocates" class="hero-img">
     <div class="hero-text">
         <h1>Contact Us</h1>
-        <p>Your trusted legal advisors in Uganda</p>
+        <p>Get in touch with us for expert legal services</p>
     </div>
 </section>
+
 
 <section class="contact-section container">
     <h2 class="section-title">Get in Touch</h2>
