--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/responsive.css">
 </head>
-<body>
-    <div class="wrapper">
-        <!-- Header / Navbar -->
-       <header>
+<<header>
   <nav class="navbar">
     <!-- Logo -->
     <div class="logo">
@@ -20,16 +17,9 @@
       </a>
     </div>
 
-    <!-- Hamburger menu for mobile -->
-    <div class="hamburger" id="hamburger">
-      <span class="bar"></span>
-      <span class="bar"></span>
-      <span class="bar"></span>
-    </div>
-
     <!-- Navigation links -->
     <ul id="nav-links">
-      <li><a href="index.html">Home</a></li>
+      <li><a href="index.html" class="active">Home</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="services.html">Services</a></li>
       <li><a href="cases.html">Cases</a></li>
@@ -38,6 +28,7 @@
     </ul>
   </nav>
 </header>
+
 
         <!-- Hero Section -->
         <section id="hero">
